# feedbackd-device-themes

./: .gitlab-ci.yml  NEWS  README.md  meson.build
data/: fairphone,fp5.json  google,sargo.json  meson.build  xiaomi,davinci.json
debian/: changelog  control  copyright
tests/: meson.build
